ui: simplify and move away from dual-pane view model; various

--- a/src/ui/app/stylesheet.styl
+++ b/src/ui/app/stylesheet.styl
@@ -192,6 +192,7 @@ code
 	word-break break-all
 	pre > &
 		background none
+		padding 0
 pre
 	background var(--c-con-normal)
 	border 1px solid transparent
