--- a/src/ui/feature/subreddit/SubredditWidget.pug
+++ b/src/ui/feature/subreddit/SubredditWidget.pug
@@ -5,7 +5,7 @@ script.
 	import FormattedHTML from '../../common/FormattedHTML.pug'
 
 	import PostFlair from '../post/PostFlair.pug'
-	import SubredditTag from './SubredditTag.pug'
+	import SubredditNameTag from './SubredditNameTag.pug'
 
 	export widget = null
 
@@ -19,7 +19,7 @@ script.
 		header.subreddit-widget-title {widget.shortName}
 		ol.subreddit-widget-related-subreddits
 			{#each widget.data as subreddit}
-				SubredditTag(name={subreddit.name})
+				SubredditNameTag(icon_url={subreddit.communityIcon || subreddit.iconUrl} name={subreddit.name})
 	{:else if widget.kind === 'image'}
 		{@const image = widget.data[0]}
 			{#if image.linkUrl}
