--- a/src/ui/app/routing/AppRouter.pug
+++ b/src/ui/app/routing/AppRouter.pug
@@ -33,9 +33,6 @@ script.
 		sanitized_feed_time_range = switch
 			when route.feed_time_range then route.feed_time_range
 			else 'all'
-		sanitized_post_comments_sort = switch
-			when route.post_comments_sort then route.post_comments_sort
-			else 'confidence'
 
 	external_navigate =
 		(link) -> location.href = link.href
@@ -103,6 +100,6 @@ script.
 
 AppContexts
 	{#if route.post_short_id || (route.subreddit_name && route.wikipage_name) || feed_type}
-		AppContent(collection_short_id={route.collection_short_id} feed_search_query={route.feed_search_query} feed_selection_type={feed_selection_type} feed_sort={sanitized_feed_sort} feed_time_range={sanitized_feed_time_range} feed_type={feed_type} multireddit_name={route.multireddit_name} post_comments_sort={sanitized_post_comments_sort} post_focus_comment_parent_count={route.post_focus_comment_parent_count} post_focus_comment_short_id={route.post_focus_comment_short_id} post_short_id={route.post_short_id} subreddit_name={route.subreddit_name} user_name={route.user_name} wikipage_name={route.wikipage_name} wikipage_version={route.wikipage_version})
+		AppContent(collection_short_id={route.collection_short_id} feed_search_query={route.feed_search_query} feed_selection_type={feed_selection_type} feed_sort={sanitized_feed_sort} feed_time_range={sanitized_feed_time_range} feed_type={feed_type} multireddit_name={route.multireddit_name} post_comments_sort={route.post_comments_sort} post_focus_comment_parent_count={route.post_focus_comment_parent_count} post_focus_comment_short_id={route.post_focus_comment_short_id} post_short_id={route.post_short_id} subreddit_name={route.subreddit_name} user_name={route.user_name} wikipage_name={route.wikipage_name} wikipage_version={route.wikipage_version})
 	{:else}
 		AppExternalLink(original_url={location})
